made updates to look and feel, first public release

--- a/src/pages/company.astro
+++ b/src/pages/company.astro
@@ -558,6 +558,7 @@ import Footer from '../components/Footer.astro';
     line-height: 1.5;
     margin-bottom: var(--spacing-lg);
     font-weight: 400;
+    color: white;
   }
 
   .statement-description {
